[gd_scene load_steps=5 format=3 uid="uid://dyh4pj2rpgd6c"]

[ext_resource type="FontFile" uid="uid://d15hqdyv1f0yi" path="res://addons/skein/resources/fonts/NotoSans-Regular.ttf" id="1"]
[ext_resource type="Script" path="res://addons/skein/dialog_box/DialogBox.gd" id="3"]

[sub_resource type="FontFile" id="12"]
fallbacks = [ExtResource("1")]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="11"]
default_font = SubResource("12")

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource("11")
script = ExtResource("3")

[node name="Portrait" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.15625
anchor_top = 0.685291
anchor_right = 0.15625
anchor_bottom = 0.685291
offset_top = 0.198593
offset_bottom = 0.198593
scale = Vector2(4, 4)
mouse_filter = 1

[node name="Name" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.320312
anchor_top = 0.533333
anchor_right = 0.429687
anchor_bottom = 0.586702
text = "test"

[node name="NameOutline" type="Panel" parent="Name"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0

[node name="Panel" type="Panel" parent="Name"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0

[node name="Options" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.445
anchor_top = 0.533213
anchor_right = 0.965445
anchor_bottom = 0.591678
offset_left = 0.319977
offset_top = 0.0719986
offset_right = 0.383972
offset_bottom = -0.00660706
alignment = 2

[node name="TextBox" type="RichTextLabel" parent="."]
clip_contents = false
anchors_preset = -1
anchor_left = 0.320313
anchor_top = 0.64
anchor_right = 0.960938
anchor_bottom = 0.893333
bbcode_enabled = true
text = "teastaaegaegas"

[node name="TextBoxOutline" type="Panel" parent="TextBox"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0

[node name="Panel" type="Panel" parent="TextBox"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0

[node name="Next" type="RichTextLabel" parent="TextBox"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.2502
offset_top = -49.1999
offset_right = -8.25024
offset_bottom = -24.1999
scale = Vector2(2, 2)
bbcode_enabled = true
text = ">"
scroll_active = false

[node name="DebugLog" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.742727
anchor_top = 0.06
anchor_right = 0.955195
anchor_bottom = 0.5
offset_left = 0.447998
offset_right = -0.120056
grow_vertical = 0
clip_text = true
max_lines_visible = 20
